# piper-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUILDING.md  Cargo.toml  Dockerfile.linux.arm64  README.md
.cargo/: config.toml
.github/actions/setup-build-environment/: action.yaml
.github/workflows/: ci.yaml
crates/espeak-rs/: Cargo.toml  README.md
crates/espeak-rs-sys/: Cargo.toml  build.rs  wrapper.h
crates/espeak-rs/src/: lib.rs
crates/espeak-rs/sys/: Cargo.toml  build.rs
crates/piper-rs-cli/: Cargo.toml  README.md
crates/piper-rs-cli/src/: main.rs
crates/sonic-rs-sys/: Cargo.toml  build.rs
crates/sonic-sys/: Cargo.toml  build.rs
examples/: enumerate_speakers.rs  multi.rs  stream.rs  usage.rs  wav.rs
src/: core.rs  lib.rs  model.rs
src/audio/: hanning_window.rs  mod.rs  synth.rs
src/audio_ops/: mod.rs  samples.rs
src/synth/: mod.rs
