[workspace]
members = ["crates/sonic-rs-sys", "crates/espeak-rs", "crates/piper-rs-cli"]

[package]
name = "piper-rs"
version = "0.1.10"
edition = "2024"
license = "MIT"
description = "Use piper TTS models in Rust"
repository = "https://github.com/thewh1teagle/piper-rs"

[dependencies]
# Local crates
espeak-rs = { path = "crates/espeak-rs", version = "0.1.10" }
sonic-rs-sys = { path = "crates/sonic-rs-sys", version = "0.1.10" }

ndarray = "0.16.1"
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.144"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
once_cell = "1.21.3"
riff-wave = "0.1.3"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
rayon = { version = "1.11.0" }

[dev-dependencies]
rodio = "0.21.1"

[features]
#default = ["compile-espeak-intonations"]
#compile-espeak-intonations = ["espeak-rs/compile-espeak-intonations"]
default = []
clang-runtime = ["bindgen/runtime"]

[build-dependencies]
bindgen = { version = "0.71.1", optional = true }
