[workspace]
members = ["crates/sonic-rs-sys", "crates/espeak-rs", "crates/piper-rs-cli"]
resolver = "1"

[package]
name = "piper-rs"
version = "0.1.9-rc.1"
edition = "2021"
license = "MIT"
description = "Use piper TTS models in Rust"
repository = "https://github.com/thewh1teagle/piper-rs"

[dependencies]
# Local crates
espeak-rs = { path = "crates/espeak-rs", version = "0.1.9", default-features = false }
sonic-rs-sys = { path = "crates/sonic-rs-sys", version = "0.1.9" }

ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ort = { version = "2.0.0-rc.9" }
ort-sys = { version = "=2.0.0-rc.9", default-features = false }                # ort-sys is a dependency of ort
once_cell = "1.21.3"
riff-wave = "0.1.3"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
rayon = { version = "1.8.1" }

[dev-dependencies]
rodio = "0.19.0"

[features]
default = ["compile-espeak-intonations"]
compile-espeak-intonations = ["espeak-rs/compile-espeak-intonations"]
