[package]
name = "espeak-rs-sys"
version = "0.1.9"
edition = "2021"
description = "Rust bindings to espeak-ng"
license = "MIT"
repository = "https://github.com/thewh1teagle/piper-rs"

include = [
    "espeak-ng/CMakeLists.txt",
    "espeak-ng/vim/",
    "espeak-ng/cmake/",
    "espeak-ng/phsource/",
    "espeak-ng/tests/",
    "espeak-ng/src/",
    "espeak-ng/espeak-ng-data/",
    "espeak-ng/dictsource/**",
    "espeak-ng/espeak-ng.pc.in",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
    # Omit too big files from dictsource
    "!espeak-ng/dictsource/extra/**",
    "!espeak-ng/dictsource/fo_list",
    "!espeak-ng/src/windows/Debug/*.wav",
]

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"
glob = "0.3.1"

[features]
default = []
compile-espeak-intonations = []
