[package]
name = "espeak-rs"
version = "0.1.5"
license = "MIT"
description = "Safe Rust bindings to espeak-ng"
keywords = ["espeak-ng", "audio", "tts", "speech", "rodio"]
repository = "https://github.com/thewh1teagle/piper-rs"
edition = "2021"

[dependencies]
espeak-rs-sys = { path = "../espeak-rs-sys", version = "0.1.5" }
once_cell = "1.18.0"
regex = "1.9.3"
ffi-support = "0.4.4"