[package]
name = "espeak-rs"
version = "0.1.10"
license = "MIT"
description = "Safe Rust bindings to espeak-ng"
keywords = ["espeak-ng", "audio", "tts", "speech", "rodio"]
repository = "https://github.com/thewh1teagle/piper-rs"
edition = "2024"

[dependencies]
espeakng-sys = "0.3.0"
once_cell = "1.18.0"
regex = "1.9.3"
ffi-support = "0.4.4"

[features]
default = []
clang-runtime = ["bindgen/runtime"]

[build-dependencies.bindgen]
version = "0.71.1"
default-features = false
