[package]
name = "espeak-rs"
version = "0.1.9"
license = "MIT"
description = "Safe Rust bindings to espeak-ng"
keywords = ["espeak-ng", "audio", "tts", "speech", "rodio"]
repository = "https://github.com/thewh1teagle/piper-rs"
edition = "2021"

[dependencies]
# Local crates
espeak-rs-sys = { path = "../espeak-rs-sys", version = "0.1.9" }

once_cell = "1.18.0"
regex = "1.9.3"
ffi-support = "0.4.4"
unicode-normalization = "0.1.24"

[features]
default = ["compile-espeak-intonations"]
compile-espeak-intonations = ["espeak-rs-sys/compile-espeak-intonations"]
