[package]
name = "piper-rs-cli"
version = "0.1.0"
edition = "2021"
authors = ["thewh1teagle"]
license = "MIT"
description = "Use vits model based on piper in Rust"
keywords = ["tts", "piper", "cli"]
homepage = "https://github.com/thewh1teagle/piper-rs"


[dependencies]
piper-rs = { path = "../../", version = "0.1.2" }
clap = { version = "4.5.22", features = ["derive"] }
eyre = "0.6.12"
rodio = "0.20.1"
