[package]
name = "piper-rs-cli"
version = "0.1.7"
edition = "2021"
authors = ["thewh1teagle"]
license = "MIT"
description = "Use vits model based on piper in Rust"
keywords = ["tts", "piper", "cli"]
homepage = "https://github.com/thewh1teagle/piper-rs"
repository = "https://github.com/thewh1teagle/piper-rs"


[dependencies]
# Local crates
piper-rs = { path = "../../", version = "0.1.7", default-features = false }

clap = { version = "4.5.22", features = ["derive"] }
eyre = "0.6.12"
rodio = "0.20.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = []
compile-espeak-intonations = ["piper-rs/compile-espeak-intonations"]
