[package]
name = "piper-rs-cli"
version = "0.1.9"
edition = "2024"
authors = ["thewh1teagle"]
license = "MIT"
description = "Use vits model based on piper in Rust"
keywords = ["tts", "piper", "cli"]
homepage = "https://github.com/thewh1teagle/piper-rs"
repository = "https://github.com/thewh1teagle/piper-rs"


[dependencies]
# Local crates
piper-rs = { path = "../../", version = "0.1.10", default-features = false }

console = "0.16.1"
clap = { version = "4.5.22", features = ["derive"] }
eyre = "0.6.12"
rodio = "0.21.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = []
clang-runtime = ["bindgen/runtime"]

[build-dependencies]
bindgen = { version = "0.71.1", optional = true }
