[package]
name = "sonic-rs-sys"
version = "0.1.0"
edition = "2021"
authors = []
description = "Raw FFI bindings to sonic rate boost library"
license = "MIT"
keywords = ["FFI", "sonic", "audio", "tts", "speech"]
categories = ["external-ffi-bindings", "api-bindings"]
repository = "https://github.com/thewh1teagle/piper-rs"
homepage = "https://github.com/thewh1teagle/piper-rs"
readme = "README.md"

include = [
    "sonic/*.c",
    "sonic/*.h",
    "sonic/Makefile",
    "espeak-ng/src",
    "espeak-ng/espeak-ng-data",
    "src/*.rs",
    "build.rs",
]

[build-dependencies]
cc = "1.0.79"
bindgen = { version = "0.59.1", default-features = false, features = [
    "runtime",
] }
