[package]
name = "espeak-rs-sys"
version = "0.1.0"
edition = "2021"

include = [
    "espeak-ng/CMakeLists.txt",
    "espeak-ng/cmake",
    "espeak-ng/src",
    "espeak-ng/dictsource",
    "espeak-ng/espeak-ng.pc.in",
    "espeak-ng/vim",
    "espeak-ng/phsource",
    "espeak-ng/tests",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
    "espeak-ng-data",

]

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1"
glob = "0.3.1"

[features]
default = []
